--- a/streamlit_app/Dockerfile
+++ b/streamlit_app/Dockerfile
@@ -1,84 +1,22 @@
-# Use an official Python base image
 FROM python:3.10-slim
 
-# Set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# Set work directory
 WORKDIR /app
 
-# Install system dependencies required by OpenCV
-RUN apt-get update && apt-get install -y libgl1 && rm -rf /var/lib/apt/lists/*
+# Install system dependencies needed by OpenCV
+RUN apt-get update && apt-get install -y \
+    libgl1 \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first to leverage Docker cache
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all files
 COPY . .
 
-# Streamlit-specific config
 EXPOSE 8000
 ENV STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
 
-# Run Streamlit
-CMD ["streamlit", "run", "app.py", "--server.port=8000", "--server.enableCORS=false"]
-# Use an official Python base image
-FROM python:3.10-slim
-
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# Set work directory
-WORKDIR /app
-
-# Install system dependencies required by OpenCV
-RUN apt-get update && apt-get install -y libgl1 && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first to leverage Docker cache
-COPY requirements.txt .
-
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy all files
-COPY . .
-
-# Streamlit-specific config
-EXPOSE 8000
-ENV STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
-
-# Run Streamlit
-CMD ["streamlit", "run", "app.py", "--server.port=8000", "--server.enableCORS=false"]
-# Use an official Python base image
-FROM python:3.10-slim
-
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# Set work directory
-WORKDIR /app
-
-# Install system dependencies required by OpenCV
-RUN apt-get update && apt-get install -y libgl1 && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first to leverage Docker cache
-COPY requirements.txt .
-
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy all files
-COPY . .
-
-# Streamlit-specific config
-EXPOSE 8000
-ENV STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
-
-# Run Streamlit
 CMD ["streamlit", "run", "app.py", "--server.port=8000", "--server.enableCORS=false"]
